# osqp-fortran

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
ci/appveyor/: install.cmd  script.cmd
ci/travis/: install.sh  script.sh
demo/: osqp_demo_fortran.F90
src/: .gitignore  osqp_f2c.c  osqpf.F90  osqpf_types.F90
